antlr4: Moved the :: up the precedece